﻿13.03.19 Runs on Raspberry 3 IOT 