@@ -1,4 +1,5 @@
-﻿using System;
+﻿using Newtonsoft.Json;
+using System;
 using System.Collections.Generic;
 using System.Collections.ObjectModel;
 using System.Linq;
@@ -14,5 +15,11 @@ namespace MSGraph.Response
                 get;
                 set;
             }
+        [JsonProperty("@odata.nextLink")]
+        public string NextLink
+        {
+            get;
+            set;
+        }
     }
 }
