@@ -5,23 +5,13 @@ using System.Collections;
 namespace MSGraph.Response
 {
     //[JsonObject]
-    public class ParseChildrenResponse  //: IEnumerable<ItemInfoResponse>
+    public class ParseChildrenResponse  
     {
         public IList<ItemInfoResponse> Value
         {
             get;
             set;
         }
-
-        //public IEnumerator<ItemInfoResponse> GetEnumerator()
-        //{
-        //    return Value.GetEnumerator();
-        //}
-
-        //IEnumerator IEnumerable.GetEnumerator()
-        //{
-        //    return GetEnumerator();
-        //}
 
         [JsonProperty("@odata.nextLink")]
         public string NextLink
